<resources>
    <string name="app_name">PlaygroundMessanger</string>
    <string name="profile">Profile</string>
    <string name="all_users">All Users</string>
    <string name="notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome to the slow motion</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login to my account</string>
    <string name="create">Create new account ?</string>
    <string name="create_new">create a new account</string>
    <string name="name">name</string>
    <string name="create_button">create a new Account</string>
    <string name="back">Back to Login</string>
    <string name="log_out">Log out</string>
    <string name="send_to">Send to...</string>
    <string name="enter">Enter notification message</string>
    <string name="send">Send</string>
</resources>
