<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".UI.LoginActivity">
    <ProgressBar
        android:visibility="invisible"
        android:indeterminate="true"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:textColor="@color/textBarBright"
        android:layout_alignParentTop="true"
        android:layout_margin="36dp"
        android:textAlignment="center"
        android:textSize="44sp"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome" />

    <EditText
        android:padding="15dp"
        android:id="@+id/edtEmail"
        android:hint="@string/email"
        android:layout_centerInParent="true"
        android:background="@drawable/input_background"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"/>

    <EditText
        android:id="@+id/edtPassword"
        android:padding="15dp"
        android:layout_below="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_background"
        android:textSize="24sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:padding="10dp"
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:background="@drawable/border_button"
        android:layout_below="@+id/edtPassword"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:text="@string/create"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/border_button"
        android:layout_marginTop="10dp"
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>