<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_bg"
    tools:context=".UI.RegisterActivity">

    <ProgressBar
        android:visibility="invisible"
        android:indeterminate="true"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/textBarBright"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:src="@drawable/adduser"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorPrimary"/>

    <EditText
        android:padding="15dp"
        android:id="@+id/edtName"
        android:hint="@string/name"
        android:layout_below="@+id/avatar"
        android:background="@drawable/input_background"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10" />

    <EditText
        android:padding="15dp"
        android:id="@+id/edtEmail"
        android:hint="@string/email"
       android:layout_below="@+id/edtName"
        android:background="@drawable/input_background"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"/>

    <EditText
        android:id="@+id/edtPassword"
        android:padding="15dp"
        android:layout_below="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_background"
        android:textSize="24sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:text="@string/create_button"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/input_background"
        android:layout_below="@+id/edtPassword"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_alignParentBottom="true"
        android:text="@string/back"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border_button"
        android:layout_marginBottom="30dp"
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>