<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".UI.MainActivity">

    <LinearLayout
        android:id="@+id/tabs_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/profileLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/profile"
            android:textColor="@color/textBarBright"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/userLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/all_users"
            android:textColor="@color/textTabLight"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/notificationsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/notifications"
            android:textColor="@color/textTabLight"
            android:textSize="16sp" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:layout_below="@+id/tabs_layout"
        android:id="@+id/mainPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>